--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,6 @@ dependencies {
 
     implementation 'com.alibaba:fastjson:1.2.40'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    //搜索功能
+    implementation 'com.amap.api:search:latest.integration'
 }
